代码生成完成

--- a/generator/src/main/resources/templates/java/co.java.vm
+++ b/generator/src/main/resources/templates/java/co.java.vm
@@ -1,11 +1,12 @@
-package {cfg.table.packageCo};
+package ${cfg.table.packageCo};
 
+import java.io.Serializable;
+import java.time.LocalDateTime;
 import javax.validation.constraints.NotBlank;
 import javax.validation.constraints.NotNull;
 import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
 import lombok.Data;
-import lombok.EqualsAndHashCode;
 import lombok.experimental.Accessors;
 
 /**
@@ -20,6 +21,7 @@ import lombok.experimental.Accessors;
 @Accessors(chain = true)
 @ApiModel(value="${cfg.table.classNameCo}对象", description="$!{table.comment}")
 public class ${cfg.table.classNameCo} implements Serializable {
+
 ## ----------  BEGIN 字段循环遍历  ----------
 #foreach($field in ${table.fields})
 #if(!${field.keyFlag} && !${field.fill})
@@ -32,20 +34,7 @@ public class ${cfg.table.classNameCo} implements Serializable {
     @NotNull(message = "${field.comment}不能为空")
 #end
     private ${field.propertyType} ${field.propertyName};
-#end
 
 #end
-
-    @Override
-    public String toString() {
-        return "${cfg.table.classNameCo}{" +
-  #foreach($field in ${table.fields})
-    #if($!{foreach.index}==0)
-        "${field.propertyName}=" + ${field.propertyName} +
-    #else
-        ", ${field.propertyName}=" + ${field.propertyName} +
-    #end
-  #end
-        "}";
-    }
+#end
 }
