--- a/generator/src/main/resources/templates/java/ro.java.vm
+++ b/generator/src/main/resources/templates/java/ro.java.vm
@@ -1,10 +1,10 @@
-package {cfg.table.packageRo};
+package ${cfg.table.packageRo};
 
-
+import java.io.Serializable;
+import java.time.LocalDateTime;
 import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
 import lombok.Data;
-import lombok.EqualsAndHashCode;
 import lombok.experimental.Accessors;
 
 /**
@@ -19,6 +19,7 @@ import lombok.experimental.Accessors;
 @Accessors(chain = true)
 @ApiModel(value="${cfg.table.classNameRo}对象", description="$!{table.comment}")
 public class ${cfg.table.classNameRo} implements Serializable {
+
 ## ----------  BEGIN 字段循环遍历  ----------
 #foreach($field in ${table.fields})
 #if(!${field.keyFlag} && !${field.fill})
@@ -26,20 +27,7 @@ public class ${cfg.table.classNameRo} implements Serializable {
     @ApiModelProperty(value = "${field.comment}")
 #end
     private ${field.propertyType} ${field.propertyName};
-#end
 
 #end
-
-    @Override
-    public String toString() {
-        return "${cfg.table.classNameRo}{" +
-  #foreach($field in ${table.fields})
-    #if($!{foreach.index}==0)
-        "${field.propertyName}=" + ${field.propertyName} +
-    #else
-        ", ${field.propertyName}=" + ${field.propertyName} +
-    #end
-  #end
-        "}";
-    }
+#end
 }
