初步实现权限配置

--- a/generator/src/main/resources/templates/angular/component.html.vm
+++ b/generator/src/main/resources/templates/angular/component.html.vm
@@ -1,14 +1,15 @@
 <page-header-wrapper>
-    <!-- [deleteMenu]="true" 将自动添加一个删除菜单，批量删除只会删除checkbox选中的值 -->
+
     <!-- [colACLTmpl]="'POST:/TEST{}:OUT'"  被所有列添加一个权限末班{}是列名的占位-->
     <ngx-grid-table
         #table
         [gridOptions]="gridOptions"
         [dataLoadModel]="'pageable'"
-        [showPagination]="false"
         [gridTableStyle]="{ height: '70%' }"
         [defaultStatusBar]="true"
         [resizable]="true"
+        [topToolPanel]="topToolPanel"
+        [bottomToolPanel]="bottomToolPanel"
         [groupSelectsChildren]="true"
         [optionCell]="option"
         [dataSource]="dataSource"
@@ -20,18 +21,48 @@
         <!--      <span>this is header</span>-->
         <!--    </ngx-table-header>-->
 
-        <ngx-table-tool-bar top [center]="['search', 'reset']" [left]="['data-mode']"> </ngx-table-tool-bar>
-
-        <ngx-table-tool-bar bottom [left]="['full', 'export']" [right]="['page']" [page]="table.pageViewTmpl"> </ngx-table-tool-bar>
-
         <!--    <ngx-table-footer>-->
         <!--      <span>this is footer</span>-->
         <!--    </ngx-table-footer>-->
     </ngx-grid-table>
 </page-header-wrapper>
 
+<!-- 上工具栏 -->
+<ng-template #topToolPanel let-table let-page="page">
+    <ngx-table-tool-bar [center]="['search', 'reset']" [left]="['data-mode']" [table]="table" [page]="page">
+        <div right>
+            <button nz-button
+                    acl [acl-ability]="'${cfg.table.rolePrefix}create'"
+                    nzSize="small"
+                    nzType="primary"
+                    (click)="onCreate()">新增</button>
+        </div>
+    </ngx-table-tool-bar>
+</ng-template>
+
+<!-- 下工具栏 -->
+<ng-template #bottomToolPanel let-table let-page="page">
+    <ngx-table-tool-bar [left]="['full']" [right]="['page']" [page]="page" [table]="table">
+        <div left>
+            <button nz-button
+                    acl [acl-ability]="'${cfg.table.rolePrefix}export'"
+                    nzSize="small"
+                    nzType="primary"
+                    (click)="this.table.exportAllPageData()">
+                <i nz-icon nzType="file-excel" nzTheme="outline"></i>导出
+            </button>
+        </div>
+    </ngx-table-tool-bar>
+</ng-template>
+
 <!-- cell 和 row对应的是 TemplateRendererComponent 中的 \$implicit(默认值ICellRendererParams对象) 和 row（RowNode对象） -->
 <ng-template #option let-cell let-row="row">
-    <!--  <button [acl]="{ ability: ['POST:/TEST'] }" (click)="print(cell, row)">test</button>-->
-    <button (click)="onOpt(cell, row)">操作</button>
+    <button nz-button nzSize="small" nzType="default"
+            acl [acl-ability]="'${cfg.table.rolePrefix}read'"
+            (click)="onView(cell, row)">详情
+    </button>
+    <button nz-button nzSize="small" nzType="default"
+            acl [acl-ability]="'${cfg.table.rolePrefix}update'"
+            (click)="onEdit(cell, row)">编辑
+    </button>
 </ng-template>
