--- a/generator/src/main/resources/templates/angular/component.html.vm
+++ b/generator/src/main/resources/templates/angular/component.html.vm
@@ -14,6 +14,7 @@
         [optionCell]="option"
         [dataSource]="dataSource"
         [searchSchema]="schema"
+        [filterHand]="filterHand"
         (pageIndexChange)="onPageIndexChange($event)"
         (gridReady)="onGridReady($event)"
     >
