--- a/generator/src/main/resources/templates/angular/component.ts.vm
+++ b/generator/src/main/resources/templates/angular/component.ts.vm
@@ -1,4 +1,5 @@
 import { GridOptions, GridReadyEvent, ICellRendererParams } from '@ag-grid-community/core';
+import { NzMessageService } from 'ng-zorro-antd/message';
 import { NzModalService } from 'ng-zorro-antd/modal';
 import { RowNode } from '@ag-grid-community/core/dist/cjs/entities/rowNode';
 import { FirstDataRenderedEvent } from '@ag-grid-community/core/dist/cjs/events';
@@ -6,7 +7,15 @@ import { Component, OnInit, ViewChild } from '@angular/core';
 import { ACLService } from '@delon/acl';
 import { SFSchema } from '@delon/form';
 import { _HttpClient } from '@delon/theme';
-import { AclColDef, IGridDataSource, NgxGridTableComponent, NgxGridTableConstants } from '@shared';
+import {
+    AclColDef,
+    asFilterInputPropertiesUI,
+    IFilter,
+    IGridDataSource,
+    NgxGridTableComponent,
+    NgxGridTableConstants
+} from '@shared';
+import { SfQueryFormComponent } from '../../../shared/components/ngx-grid-table/sf-query-form/sf-query-form.component';
 import { DataSourceUtils } from '../../DataSourceUtils';
 import { ${cfg.table.angularCompClassName}CreateComponent } from './modal/create.component';
 import { ${cfg.table.angularCompClassName}EditComponent } from './modal/edit.component';
@@ -17,13 +26,10 @@ import { ${cfg.table.angularCompClassName}ViewComponent } from './modal/view.com
     templateUrl: '${cfg.table.angularCompHtmlName}',
 })
 export class ${cfg.table.angularCompClassName}Component implements OnInit {
-    // properties 的定义为 filter-input.widget.ts -> FilterSFUISchemaItem 接口
-    // 查询字段配置
-    schema: SFSchema = {
+    // properties 的定义为 filter-input.widget.ts -> FilterInputUISchema 接口
+    // id会转换为 { type: 'integer', title: 'id', ui: { widget: 'filter-input', filterType: 'number', options: ['equals'] } }
+    schema: SFSchema = asFilterInputPropertiesUI({
         properties: {
-            // testACL: { type: 'string', title: '测试权限', ui: { options: ['greaterThanOrEqual'], acl: { ability: ['POST:/TEST'] } } },
-            // testSelect1: { type: 'array', title: '测试多选2', ui: { options: ['in'], selectValues: [{label: 'opt1', value: '选项1'}, {label: 'opt2', value: '选项2'}, {label: 'opt3', value: '选项3'}] } } },
-            // testSelect2: { type: 'array', title: '测试多选', ui: { options: ['in'], selectValues: ['选项1', '选项2', '选项3'] } } }, // key和value是一样的时候，可以直接简写成字符串
 #foreach($field in ${table.fields})
     #if(${field.propertyType.equalsIgnoreCase("boolean")})
             ${field.propertyName}: { type: 'array', title: '${field.comment}', ui: { options: ['in'], selectValues: [{label: '是', value: true}, {label: '否', value: false}] } },
@@ -55,7 +61,7 @@ export class ${cfg.table.angularCompClassName}Component implements OnInit {
             // aclTmpl: 'POST:/{}/OUT',
             // acl: { ability: ['POST:/TEST0'] },
         },
-    };
+    });
 
     // 表格配置
     columnDefs: AclColDef[] = [
@@ -80,14 +86,13 @@ export class ${cfg.table.angularCompClassName}Component implements OnInit {
 
     constructor(private http: _HttpClient,
                 private aclService: ACLService,
+                private message: NzMessageService,
                 private modal: NzModalService) {
         this.gridOptions = {
             enableCharts: false,
             columnDefs: this.columnDefs,
             enableRangeSelection: true,
-            getRowNodeId: (data) => {
-                return data.id;
-            },
+            getRowNodeId: this.idGetter,
             onFirstDataRendered(event: FirstDataRenderedEvent): void {
                 event.columnApi.autoSizeAllColumns();
             },
@@ -99,19 +104,43 @@ export class ${cfg.table.angularCompClassName}Component implements OnInit {
 
     }
 
+    idGetter(data: any): any {
+        return data.id;
+    }
 
     onGridReady(e: { event: GridReadyEvent; gridTable: NgxGridTableComponent }): void {
         // 添加右键菜单
         this.table.addMenu({
-          name: 'test',
+          name: '删除',
           show: 'selected',
           acl: { ability: ['${cfg.table.rolePrefix}delete'] },
           callback: (selected) => {
-            console.log(selected);
+              this.http.delete(`${cfg.table.angularApiPath}/delete/${this.idGetter(selected)}`).subscribe(value => {
+                  this.message.success('删除成功');
+                  this.table.refresh();
+              });
           },
         });
         // 按每列内容重新分配列宽
         this.table.columnApi.autoSizeAllColumns();
+    }
+
+    /**
+     * IFilter表示查询条件。
+     * 表格内置的 SfQueryFormComponent 将并根 SFSchema 来生成 IFilter 对象数组
+     * 可以通过sf.value 将会获得每一个属性UI中填入的值。如果是 {widget: 'filter-input'} 的字段才自动将控件内填入的值转成 IFilter 对象
+     * 其他非 filter-input 的控件，需要开发人员手动转换。
+     * 如果开发人员需要给表格额外添加条件，也可以在这里加入更多的IFilter
+     *
+     * 自动生成的代码会将所有 SFSchema 的 UI 转成 filter-input，因此，默认是直接返回所有 filter
+     * @param filter 所有filter-input生成的 IFilter对象
+     * @param sf 表格的form对象。
+     * @result 返回处理后的查询条件数组。
+     */
+    filterHand = (filter: IFilter[], sf: SfQueryFormComponent): IFilter[] => {
+
+        //不做任何处理，直接返回表格生成的filter对象数组。
+        return filter;
     }
 
     onPageIndexChange(index: number): void {
@@ -124,9 +153,7 @@ export class ${cfg.table.angularCompClassName}Component implements OnInit {
             nzFooter: null,
             nzMaskClosable: false,
         }).afterClose.subscribe(result => {
-            if (result.success) {
-                this.table.refresh();
-            }
+            this.table.refresh();
         });
     }
 
@@ -137,9 +164,7 @@ export class ${cfg.table.angularCompClassName}Component implements OnInit {
             nzFooter: null,
             nzMaskClosable: false,
         }).afterClose.subscribe(result => {
-            if (result.success) {
-                this.table.refresh();
-            }
+            this.table.refresh();
         });
     }
 
