添加默认列工具栏

--- a/generator/src/main/resources/templates/angular/component.ts.vm
+++ b/generator/src/main/resources/templates/angular/component.ts.vm
@@ -90,6 +90,7 @@ export class ${cfg.table.angularCompClassName}Component implements OnInit {
                 private modal: NzModalService) {
         this.gridOptions = {
             enableCharts: false,
+            sideBar: 'default',
             columnDefs: this.columnDefs,
             enableRangeSelection: true,
             getRowNodeId: this.idGetter,
