--- a/anr-base/anr-generator/src/main/resources/templates/angular/edit.component.ts.vm
+++ b/anr-base/anr-generator/src/main/resources/templates/angular/edit.component.ts.vm
@@ -56,7 +56,7 @@ export class ${cfg.table.angularCompClassName}EditComponent implements OnInit {
                     widget: 'string',
                     placeholder: '角色唯一标识,不可重复,由字母,下划线,数字组合',
                     errors: {
-                        'pattern': '仅支持输入字母、下划线、数字'
+                        pattern: '仅支持输入字母、下划线、数字'
                     }
                 }
             },
