--- a/anr-base/anr-generator/src/main/resources/templates/angular/create.component.ts.vm
+++ b/anr-base/anr-generator/src/main/resources/templates/angular/create.component.ts.vm
@@ -1,8 +1,8 @@
 import { Component, OnInit } from '@angular/core';
+import { SFSchema } from '@delon/form';
+import { _HttpClient } from '@delon/theme';
 import { NzMessageService } from 'ng-zorro-antd/message';
 import { NzModalRef } from 'ng-zorro-antd/modal';
-import { _HttpClient } from '@delon/theme';
-import { SFSchema } from '@delon/form';
 
 @Component({
     selector: 'app-create-${cfg.table.angularCompSelectorName}',
@@ -19,7 +19,7 @@ export class ${cfg.table.angularCompClassName}CreateComponent implements OnInit 
         #if(${field.propertyType.equalsIgnoreCase("boolean")})
             ${field.propertyName}: {
                 type: 'boolean', title: '${field.comment}',
-                enum: [{label: '是', value: true,}, {label: '否', value: false}],
+                enum: [{label: '是', value: true}, {label: '否', value: false}],
                 default: true,
                 ui: {placeholder: '是否启用', widget: 'select'}
             },
@@ -69,7 +69,7 @@ export class ${cfg.table.angularCompClassName}CreateComponent implements OnInit 
             ${field.propertyName}: {
                 type: 'array',
                 title: '${field.comment}',
-                enum: [{label: 'v0', value: 0,}, {label: 'v1', value: 1}],
+                enum: [{label: 'v0', value: 0}, {label: 'v1', value: 1}],
                 default: 0,
                 ui: {placeholder: '${field.comment}', widget: 'select'}
             },
@@ -95,14 +95,14 @@ export class ${cfg.table.angularCompClassName}CreateComponent implements OnInit 
 
     }
 
-    save(value: any) {
+    save(value: any): void {
         this.http.post(`${cfg.table.angularApiPath}/create`, value).subscribe(res => {
             this.msgSrv.success('添加成功');
             this.modal.close(res);
         });
     }
 
-    close() {
+    close(): void {
         this.modal.destroy();
     }
 }
